add: new register.html and login.html

--- a/source/about.html
+++ b/source/about.html
@@ -17,7 +17,7 @@
     <nav class="main-nav">
       <ul>
         <li><a href="about.html" class="active">О нас</a></li>
-        <li><a href="appointment.html">Запись на приём</a></li>
+        <li><a href="appointment.html">Получить результаты</a></li>
         <li><a href="services.html">Услуги</a></li>
         <li><a href="contact.html">Контакты</a></li>
       </ul>
@@ -63,9 +63,10 @@
         <p>Масштабируемая платформа, внедрённая во всех государственных больницах, с удобным интерфейсом для пожилых людей и полной системой аудита и защиты данных.</p>
 
         <div class="cta-row" role="group" aria-label="Действия" style="margin-top:20px;">
-          <a class="btn large-btn" href="register.html" role="button" aria-label="Зарегистрироваться">Зарегистрироваться</a>
-          <a class="btn large-btn outline" href="patient-login.html" role="button" aria-label="Войти как пациент">Войти</a>
-        </div>
+        <a class="btn large-btn" href="register.html" role="button" aria-label="Зарегистрироваться">Зарегистрироваться</a>
+        <a class="btn large-btn outline" href="login.html" role="button" aria-label="Войти как пациент">Войти</a>
+</div>
+
       </div>
     </div>
   </div>
