--- a/source/appointment.html
+++ b/source/appointment.html
@@ -13,14 +13,15 @@
 <header class="site-header">
   <div class="container header-content">
     <div class="logo">
-      <a href="/" class="logo-text">AnalizGO</a>
+      <a href="index.html" class="logo-text">AnalizGO</a>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="/about.html">О нас</a></li>
-        <li><a href="/appointment.html" class="active">Запись на приём</a></li>
-        <li><a href="/services.html">Услуги</a></li>
-        <li><a href="/contact.html">Контакты</a></li>
+        <li><a href="about.html">О нас</a></li>
+        <li><a href="appointment.html" class="active">Получить результаты</a></li>
+        <li><a href="services.html">Услуги</a></li>
+        <li><a href="contact.html">Контакты</a></li>
+
       </ul>
     </nav>
   </div>
@@ -35,7 +36,7 @@
       <!-- Левая колонка: форма -->
       <div class="contact-area">
         <div class="section-title">
-          <h3>Запись на <span>приём</span></h3>
+          <h3>Получить<span> результаты</span></h3>
           <p>Заполните форму и получите подтверждение на Email или SMS.</p>
         </div>
 
@@ -64,7 +65,7 @@
 
           <textarea class="form-control" placeholder="Сообщение (необязательно)"></textarea>
 
-          <button type="submit" class="btn large-btn">Отправить заявку</button>
+          <button type="submit" class="btn large-btn">Отправить заявку на получение</button>
         </form>
       </div>
 
