--- a/source/about.html
+++ b/source/about.html
@@ -23,7 +23,7 @@
       </ul>
       <a href="admin-login.html" class="admin-btn">Админ</a>
     </nav>
-  </div>
+  </div>\
 </header>
 
 <!-- Заголовок страницы -->
